--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                                 <a class="menu__link" href="#services">SERVICES</a>
                             </li>
                             <li class="menu__list-item">
-                                <a class="menu__link" href="#">PORTFOLIO</a>
+                                <a class="menu__link" href="#portfolio">PORTFOLIO</a>
                             </li>
                             <li class="menu__list-item">
                                 <a class="menu__link" href="#">ABOUT</a>
@@ -41,12 +41,14 @@
                     <div class="home__caption">
                         COME, STAY FOR A COFFEE
                     </div>
-                    <a href="#" class="home__link">HAVE A SEAT</a>
+                    <div class="home__button">
+                        <a href="#" class="home__link">HAVE A SEAT</a>
+                    </div>
                 </div>
             </div>
             <section class="section services" id="services">
                 <div class="main-container">
-                    <h2 class="section__title services__title">
+                    <h2 class="section__title">
                         SERVICES
                     </h2>
                 </div>
@@ -54,7 +56,7 @@
                     <div class="main-container">
                         <article class="article services__column">
                             <img src="img/PEN.jpg" alt="Карандаш">
-                            <h2 class="article__title services__column-title">
+                            <h2 class="article__title services__title">
                                 BRANDING
                             </h2>
                             <div class="article__content services__column-text">
@@ -66,7 +68,7 @@
                         </article>
                         <article class="article services__column">
                             <img src="img/PC.jpg" alt="Компьютер">
-                            <h2 class="article__title services__column-title">
+                            <h2 class="article__title services__title">
                                 WEB DESIGN
                             </h2>
                             <div class="article__content services__column-text">
@@ -78,7 +80,7 @@
                         </article>
                         <article class="article services__column services__marketing">
                             <img src="img/Mic.jpg" alt="Микрофон">
-                            <h2 class="article__title services__column-title">
+                            <h2 class="article__title services__title">
                                 MARKETING
                             </h2>
                             <div class="article__content services__column-text">
@@ -89,6 +91,116 @@
                             </div>
                         </article>
                     </div>
+                </div>
+            </section>
+            <section class="section portfolio" id="portfolio">
+                <div class="main-container">
+                    <h2 class="section__title">
+                        PORTFOLIO
+                    </h2>
+                </div>
+                <div class="section__content protfolio__content">
+                    <div class="portfolio__column">
+                        <img class="portfolio__img" src="img/port8.jpg" alt="Проект 3">
+                        <img class="portfolio__img" src="img/port1.jpg" alt="Проект 1">
+                        <img class="portfolio__img" src="img/port2.jpg" alt="Проект 2">
+                        <img class="portfolio__img" src="img/port3.jpg" alt="Проект 3">
+                        <img class="portfolio__img" src="img/port4.jpg" alt="Проект 4">
+                        <img class="portfolio__img" src="img/port5.jpg" alt="Проект 5">
+                        <img class="portfolio__img" src="img/port2.jpg" alt="Проект 5">
+                        <img class="portfolio__img" src="img/port5.jpg" alt="Проект 4">
+                        <img class="portfolio__img" src="img/port6.jpg" alt="Проект 1">
+                        <img class="portfolio__img" src="img/port7.jpg" alt="Проект 2">
+                        <img class="portfolio__img" src="img/port8.jpg" alt="Проект 3">
+                        <img class="portfolio__img" src="img/port3.jpg" alt="Проект 6">
+                    </div>
+                </div>
+            </section>
+            <section class="section about" id="about">
+                <div class="main-container">
+                    <h2 class="section__title">
+                        ABOUT US
+                    </h2>
+                </div>
+                <div class="section__content member">
+                        <div class="about__header main-container">
+                                <div class="member__img">
+                                    <img src="img/member1.png" alt="Elizabeth Stevens">
+                                </div>
+                                <div class="member__img">
+                                    <img src="img/member2.png" alt="John Smith">
+                                </div>
+                                <div class="member__img">
+                                    <img src="img/member3.png" alt="Diana Paterns">
+                                </div>
+                                <div class="member__img">
+                                    <img src="img/member4.png" alt="Kate Eastwood">
+                                </div>
+                        </div>
+                        <div class="about__content">
+                            <div class="main-container">
+                                <article class="article member__info">
+                                    <h2 class="article__title member__title">
+                                        John Smith - Lead Graphic Artist
+                                    </h2>
+                                    <div class="article__content member__text">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                                        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                                        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                                        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                                        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                                        laborum.
+                                    </div>
+                                </article>
+                                <article class="article skill">
+                                    <div class="skill__column">
+                                        <h2 class="article__title member__title">
+                                            Skills
+                                        </h2>
+                                        <div class="article__content">
+                                            <div class="member__text skill__text">
+                                                <span class="skill__name">PHOTOSHOP</span>
+                                            </div>
+                                            <div class="member__text skill__text">
+                                                <span class="skill__name">ILLUSTRATOR</span>
+                                            </div>
+                                            <div class="member__text skill__text">
+                                                <span class="skill__name">WORDPRESS</span>
+                                            </div>
+                                            <div class="member__text skill__text">
+                                                <span class="skill__name">JOOMLA</span>
+                                            </div>
+                                            <div class="member__text skill__text">
+                                                <span class="skill__name">JQUERY</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="skill__column skill__column-bar">
+                                        <div class="skill__bar-row">
+                                            <hr class="skill__bar skill__bar-100">
+                                            <span class="skill__percent">100%</span>
+                                        </div>
+                                        <div class="skill__bar-row">
+                                            <hr class="skill__bar skill__bar-98">
+                                            <span class="skill__percent">98%</span>
+                                        </div>
+                                        <div class="skill__bar-row">
+                                            <hr class="skill__bar skill__bar-67">
+                                            <span class="skill__percent">67%</span>
+                                        </div>
+                                        <div class="skill__bar-row">
+                                            <hr class="skill__bar skill__bar-70">
+                                            <span class="skill__percent">70%</span>
+                                        </div>
+                                        <div class="skill__bar-row">
+                                            <hr class="skill__bar skill__bar-58">
+                                            <span class="skill__percent">58%</span>
+                                        </div>
+                                    </div>
+                                </article>
+                            </div>
+                        </div>
                 </div>
             </section>
     </div>
