Изменён блок Skills 1. Убрано сваливания элемента skill__column

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                                 <a class="menu__link" href="#portfolio">PORTFOLIO</a>
                             </li>
                             <li class="menu__list-item">
-                                <a class="menu__link" href="#">ABOUT</a>
+                                <a class="menu__link" href="#about">ABOUT</a>
                             </li>
                             <li class="menu__list-item">
                                 <a class="menu__link" href="#">BLOG</a>
