Перевёрстаны прогресс-бары в соотвествии с HTML5

--- a/index.html
+++ b/index.html
@@ -178,23 +178,28 @@
                                     </div>
                                     <div class="skill__column skill__column-bar">
                                         <div class="skill__bar-row">
-                                            <hr class="skill__bar skill__bar-100">
+                                            <progress class="skill__bar skill__bar-100" max="100" value="100">
+                                            </progress>
                                             <span class="skill__percent">100%</span>
                                         </div>
                                         <div class="skill__bar-row">
-                                            <hr class="skill__bar skill__bar-98">
+                                            <progress class="skill__bar skill__bar-98" max="100" value="98">
+                                            </progress>
                                             <span class="skill__percent">98%</span>
                                         </div>
                                         <div class="skill__bar-row">
-                                            <hr class="skill__bar skill__bar-67">
+                                            <progress class="skill__bar skill__bar-67" max="100" value="67">
+                                            </progress>
                                             <span class="skill__percent">67%</span>
                                         </div>
                                         <div class="skill__bar-row">
-                                            <hr class="skill__bar skill__bar-70">
+                                            <progress class="skill__bar skill__bar-70" max="100" value="70">
+                                            </progress>
                                             <span class="skill__percent">70%</span>
                                         </div>
                                         <div class="skill__bar-row">
-                                            <hr class="skill__bar skill__bar-58">
+                                            <progress class="skill__bar skill__bar-58" max="100" value="58">
+                                            </progress>
                                             <span class="skill__percent">58%</span>
                                         </div>
                                     </div>
