Прототипирован блок latest posts

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                 <a class="menu__link" href="#about">ABOUT</a>
                             </li>
                             <li class="menu__list-item">
-                                <a class="menu__link" href="#">BLOG</a>
+                                <a class="menu__link" href="#posts">BLOG</a>
                             </li>
                             <li class="menu__list-item">
                                 <a class="menu__link" href="#">CONTACT</a>
@@ -208,6 +208,69 @@
                         </div>
                 </div>
             </section>
-    </div>
+            <section class="section posts" id="posts">
+                <div class="main-container">
+                    <h2 class="section__title">
+                        LATEST POSTS
+                    </h2>
+                </div>
+                <div class="section__content posts__content">
+                    <div class="main-container">
+                        <div class="posts__column">
+                            <article class="article posts__article">
+                                <img src="img/post1.jpg" alt="Летнее прюключение">
+                                <div class="article__content posts__column-text">
+                                    <h2 class="article__title posts__title">
+                                        SUMMER ADVENTURES
+                                    </h2>
+                                        Lorem ipsum dolor sit amet, consectetur
+                                        adipisicing elit, sed do eiusmod tempor
+                                        ut labore et dolore magna aliqua. Ut enim
+                                        ad minim veniam, quis nostrud
+                                </div>
+                            </article>
+                            <article class="article posts__article">
+                                <img src="img/post2.jpg" alt="Карандаш">
+                                <div class="article__content posts__column-text">
+                                    <h2 class="article__title posts__title">
+                                        ROMANIAN FOLKLORE
+                                    </h2>
+                                        Lorem ipsum dolor sit amet, consectetur
+                                        adipisicing elit, sed do eiusmod tempor
+                                        ut labore et dolore magna aliqua. Ut enim
+                                        ad minim veniam, quis nostrud
+                                </div>
+                            </article>
+                        </div>
+                        <div class="posts__column posts__item-column">
+                            <article class="article posts__article">
+                                <img src="img/post3.jpg" alt="Карандаш">
+                                <div class="article__content posts__column-text">
+                                    <h2 class="article__title posts__title">
+                                        HEROES: DECAT O REVI...
+                                    </h2>
+                                        Lorem ipsum dolor sit amet, consectetur
+                                        adipisicing elit, sed do eiusmod tempor
+                                        ut labore et dolore magna aliqua. Ut enim
+                                        ad minim veniam, quis nostrud
+                                </div>
+                            </article>
+                            <article class="article posts__article">
+                                <img src="img/post4.jpg" alt="Карандаш">
+                                <div class="article__content posts__column-text">
+                                    <h2 class="article__title posts__title">
+                                        WHAT’S ON DUBAI AND...
+                                    </h2>
+                                        Lorem ipsum dolor sit amet, consectetur
+                                        adipisicing elit, sed do eiusmod tempor
+                                        ut labore et dolore magna aliqua. Ut enim
+                                        ad minim veniam, quis nostrud
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
 </body>
 </html>
