Изменения на сайте 1. Добавлены flexbox в шапке сайта, а также в блоке about 2. Измененё блок home добавлены отступы в соотвествии с макетом, фоново изображение по-другому применено 3. В блоке POSTS переделаны заголовки в соотвествии с с дизайном 4. Изменена контактная форма, добавлены боковые padding для низких разрешений экранов 5. Изменены шрифты в блоке с контактной формой 6. В шапке убраны лишние псевдоэлементы

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="page">
             <header class="header">
-                <div class="main-container">
+                <div class="main-container header__layout">
                     <h1 class="header__logo">
                         DR<span class="header__char">O</span>PP
                     </h1>
@@ -36,10 +36,10 @@
                     </nav>
                 </div>
             </header>
-            <div class="home" id="home">
+            <div class="home home-container home__bg" id="home">
                 <div class="main-container">
                     <div class="home__caption">
-                        COME, STAY FOR A COFFEE
+                        COME,STAY FOR A COFFEE!
                     </div>
                     <div class="home__item">
                         <a href="#" class="home__button button">HAVE A SEAT</a>
@@ -56,9 +56,9 @@
                     <div class="main-container">
                         <article class="article services__column">
                             <img src="img/PEN.jpg" alt="Карандаш">
-                            <h2 class="article__title services__title">
+                            <h3 class="article__title services__title">
                                 BRANDING
-                            </h2>
+                            </h3>
                             <div class="article__content services__column-text">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipisicing elit, sed do eiusmod tempor
@@ -68,9 +68,9 @@
                         </article>
                         <article class="article services__column">
                             <img src="img/PC.jpg" alt="Компьютер">
-                            <h2 class="article__title services__title">
+                            <h3 class="article__title services__title">
                                 WEB DESIGN
-                            </h2>
+                            </h3>
                             <div class="article__content services__column-text">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipisicing elit, sed do eiusmod tempor
@@ -80,9 +80,9 @@
                         </article>
                         <article class="article services__column services__marketing">
                             <img src="img/Mic.jpg" alt="Микрофон">
-                            <h2 class="article__title services__title">
+                            <h3 class="article__title services__title">
                                 MARKETING
-                            </h2>
+                            </h3>
                             <div class="article__content services__column-text">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipisicing elit, sed do eiusmod tempor
@@ -242,7 +242,7 @@
                     <div class="main-container">
                         <div class="posts__column">
                             <article class="article posts__article">
-                                <img src="img/post1.jpg" alt="Летнее прюключение">
+                                <img class="posts__img" src="img/post1.jpg" alt="Летнее прюключение">
                                 <div class="article__content posts__column-content">
                                     <h2 class="article__title posts__title">
                                         SUMMER ADVENTURES
@@ -262,7 +262,7 @@
                                 </div>
                             </article>
                             <article class="article posts__article">
-                                <img src="img/post2.jpg" alt="Карандаш">
+                                <img class="posts__img" src="img/post2.jpg" alt="Карандаш">
                                 <div class="article__content posts__column-content">
                                     <h2 class="article__title posts__title">
                                         ROMANIAN FOLKLORE
@@ -284,7 +284,7 @@
                         </div>
                         <div class="posts__column posts__item-column">
                             <article class="article posts__article">
-                                <img src="img/post3.jpg" alt="Карандаш">
+                                <img class="posts__img" src="img/post3.jpg" alt="Карандаш">
                                 <div class="article__content posts__column-content">
                                     <h2 class="article__title posts__title">
                                         HEROES: DECAT O REVI...
@@ -304,7 +304,7 @@
                                 </div>
                             </article>
                             <article class="article posts__article">
-                                <img src="img/post4.jpg" alt="Карандаш">
+                                <img class="posts__img" src="img/post4.jpg" alt="Карандаш">
                                 <div class="article__content posts__column-content">
                                     <h2 class="article__title posts__title">
                                         WHAT’S ON DUBAI AND...
