--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
                 <div class="section__content services__content">
                     <div class="main-container">
                         <article class="article services__column">
-                            <img src="img/PEN.jpg" alt="Карандаш">
-                            <h3 class="article__title services__title">
+                            <h3 class="article__title services__title services__title_pen">
                                 BRANDING
                             </h3>
                             <div class="article__content services__column-text">
@@ -67,8 +66,7 @@
                             </div>
                         </article>
                         <article class="article services__column">
-                            <img src="img/PC.jpg" alt="Компьютер">
-                            <h3 class="article__title services__title">
+                            <h3 class="article__title services__title services__title_pc">
                                 WEB DESIGN
                             </h3>
                             <div class="article__content services__column-text">
@@ -79,8 +77,7 @@
                             </div>
                         </article>
                         <article class="article services__column services__marketing">
-                            <img src="img/Mic.jpg" alt="Микрофон">
-                            <h3 class="article__title services__title">
+                            <h3 class="article__title services__title services__title_mic">
                                 MARKETING
                             </h3>
                             <div class="article__content services__column-text">
@@ -151,7 +148,7 @@
                                 <a class="member__link" href="#">
                                     <img src="img/member1.png" alt="Elizabeth Stevens">
                                 </a>
-                                <a class="member__link" href="#">
+                                <a class="member__link member__link_active" href="#">
                                     <img src="img/member2.png" alt="John Smith">
                                 </a>
                                 <a class="member__link" href="#">
@@ -175,6 +172,23 @@
                                         velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
                                         cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                                         laborum.
+                                    </div>
+                                    <div class="member__socials">
+                                        <a class="member__socials-link" href="#">
+                                            <img src="img/Facebook.png">
+                                        </a>
+                                        <a class="member__socials-link" href="#">
+                                            <img src="img/Google+.png">
+                                        </a>
+                                        <a class="member__socials-link" href="#">
+                                            <img src="img/Vimeo.png">
+                                        </a>
+                                        <a class="member__socials-link" href="#">
+                                            <img src="img/Dribbble .png">
+                                        </a>
+                                        <a class="member__socials-link" href="#">
+                                            <img src="img/YouTube .png">
+                                        </a>
                                     </div>
                                 </article>
                                 <article class="article skill">
@@ -337,16 +351,16 @@
                     <form action="#" method="post" class="feedback main-container">
                         <input name="name" class="feedback__name" placeholder="Your name here">
                         <input name="email" type="email" class="feedback__email" placeholder="Email address here" required>
-                        <textarea name="message" class="feedback__message" rows="6" maxlength="800" placeholder="You message here"></textarea>
+                        <textarea name="message" class="feedback__message" rows="8" maxlength="800" placeholder="You message here"></textarea>
                         <button class="feedback__button button">SEND MESSAGE NOW</button>
                     </form>
+                    <footer class="footer">
+                        <div class="footer__content">
+                            © 2014 | Original Grafixity Theme | Powered by WordPress
+                        </div>
+                    </footer>
                 </div>
             </section>
-            <footer class="footer">
-                <div class="footer__content">
-                    © 2014 | Original Grafixity Theme | Powered by WordPress
-                </div>
-            </footer>
     </div>
 </body>
 </html>
