--- a/index.html
+++ b/index.html
@@ -6,89 +6,84 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="page">
-            <header class="header">
-                <div class="main-container header__layout">
-                    <h1 class="header__logo">
-                        DR<span class="header__char">O</span>PP
-                    </h1>
-                    <nav class="menu header__menu">
-                        <ul class="menu__list">
-                            <li class="menu__list-item">
-                                <a class="menu__link menu__link_active" href="#home">HOME</a>
-                            </li>
-                            <li class="menu__list-item">
-                                <a class="menu__link" href="#services">SERVICES</a>
-                            </li>
-                            <li class="menu__list-item">
-                                <a class="menu__link" href="#portfolio">PORTFOLIO</a>
-                            </li>
-                            <li class="menu__list-item">
-                                <a class="menu__link" href="#about">ABOUT</a>
-                            </li>
-                            <li class="menu__list-item">
-                                <a class="menu__link" href="#posts">BLOG</a>
-                            </li>
-                            <li class="menu__list-item">
-                                <a class="menu__link" href="#contact">CONTACT</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-            </header>
-            <div class="home home-container home__bg" id="home">
-                <div class="main-container">
-                    <div class="home__caption">
-                        COME,STAY FOR A COFFEE!
-                    </div>
-                    <div class="home__item">
-                        <a href="#" class="home__button button">HAVE A SEAT</a>
-                    </div>
+        <header class="header">
+            <div class="main-container header__inner">
+                <h1 class="header__logo title">
+                    dr<span class="header__char">o</span>pp
+                </h1>
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li class="menu__list-item">
+                            <a class="menu__link link" href="#home">HOME</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__link link" href="#services">SERVICES</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__link link" href="#portfolio">PORTFOLIO</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__link link" href="#about">ABOUT</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__link link" href="#posts">BLOG</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__link link" href="#contact">CONTACT</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <div class="home home-container" id="home">
+            <div class="main-container home__content">
+                <span class="home__text">
+                    come,STAY FOR A COFFEE!
+                </span>
+                <div class="home__item">
+                    <a href="#" class="home__button button">HAVE A SEAT</a>
                 </div>
             </div>
+        </div>
             <section class="section services" id="services">
-                <div class="main-container">
-                    <h2 class="section__title">
-                        SERVICES
+                    <h2 class="section__title title">
+                        services
                     </h2>
-                </div>
-                <div class="section__content services__content">
-                    <div class="main-container">
-                        <article class="article services__column">
-                            <h3 class="article__title services__title services__title_pen">
-                                BRANDING
+                <div class="main-container section__content">
+                        <article class="services__branding">
+                            <h3 class="title services__title">
+                                branding
                             </h3>
-                            <div class="article__content services__column-text">
+                            <p class="services__content">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipisicing elit, sed do eiusmod tempor
                                 ut labore et dolore magna aliqua. Ut enim
                                 ad minim veniam, quis nostrud
-                            </div>
+                            </p>
                         </article>
-                        <article class="article services__column">
-                            <h3 class="article__title services__title services__title_pc">
-                                WEB DESIGN
+                        <article class="services__design">
+                            <h3 class="title services__title">
+                                web design
                             </h3>
-                            <div class="article__content services__column-text">
+                            <p class="services__content">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipisicing elit, sed do eiusmod tempor
                                 ut labore et dolore magna aliqua. Ut enim
                                 ad minim veniam, quis nostrud
-                            </div>
+                            </p>
                         </article>
-                        <article class="article services__column services__marketing">
-                            <h3 class="article__title services__title services__title_mic">
-                                MARKETING
+                        <article class="services__marketing">
+                            <h3 class="title services__title">
+                                marketing
                             </h3>
-                            <div class="article__content services__column-text">
+                            <p class="services__content">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipisicing elit, sed do eiusmod tempor
                                 ut labore et dolore magna aliqua. Ut enim
                                 ad minim veniam, quis nostrud
-                            </div>
+                            </p>
                         </article>
                     </div>
-                </div>
             </section>
             <section class="section portfolio" id="portfolio">
                 <div class="main-container">
@@ -361,6 +356,5 @@
                     </footer>
                 </div>
             </section>
-    </div>
 </body>
 </html>
