Изменения на сайте: Изменения в первых трёх блоках: 1. В шапке убрана лишняя разметка каркаса 2. Добавлена типографика к заголовкам 3. Убраны лишние свойства 4. В блоке services убраны классы для абзацев Изменения в проекте сайта: 1. Добавлена сборка пакетов с помощью Gulp 2. Стилизация сайта будет основываться на препроцессоре LESS 3. Автоматически добавлены префиксы к свойства с помощью Gulp

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
         <header class="header">
-            <div class="main-container header__inner">
-                <h1 class="header__logo title">
+            <div class="main-container header__container">
+                <h1 class="header__logo">
                     dr<span class="header__char">o</span>pp
                 </h1>
                 <nav class="menu">
@@ -54,34 +54,40 @@
                             <h3 class="title services__title">
                                 branding
                             </h3>
-                            <p class="services__content">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit, sed do eiusmod tempor
-                                ut labore et dolore magna aliqua. Ut enim
-                                ad minim veniam, quis nostrud
-                            </p>
+                            <div  class="services__content">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipisicing elit, sed do eiusmod tempor
+                                    ut labore et dolore magna aliqua. Ut enim
+                                    ad minim veniam, quis nostrud
+                                </p>
+                            </div>
                         </article>
                         <article class="services__design">
                             <h3 class="title services__title">
                                 web design
                             </h3>
-                            <p class="services__content">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit, sed do eiusmod tempor
-                                ut labore et dolore magna aliqua. Ut enim
-                                ad minim veniam, quis nostrud
-                            </p>
+                            <div  class="services__content">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipisicing elit, sed do eiusmod tempor
+                                    ut labore et dolore magna aliqua. Ut enim
+                                    ad minim veniam, quis nostrud
+                                </p>
+                            </div>
                         </article>
                         <article class="services__marketing">
                             <h3 class="title services__title">
                                 marketing
                             </h3>
-                            <p class="services__content">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit, sed do eiusmod tempor
-                                ut labore et dolore magna aliqua. Ut enim
-                                ad minim veniam, quis nostrud
-                            </p>
+                            <div  class="services__content">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipisicing elit, sed do eiusmod tempor
+                                    ut labore et dolore magna aliqua. Ut enim
+                                    ad minim veniam, quis nostrud
+                                </p>
+                            </div>
                         </article>
                     </div>
             </section>
