Изменён блок с сервисами

--- a/index.html
+++ b/index.html
@@ -45,16 +45,17 @@
                 </div>
             </div>
         </div>
-            <section class="section services" id="services">
+            <section class="section section__services" id="services">
                     <h2 class="section__title title">
                         services
                     </h2>
-                <div class="main-container section__content">
-                        <article class="services__branding">
-                            <h3 class="title services__title">
+            <div class="section__content">
+                <div class="main-container">
+                        <article class="section__branding">
+                            <h3 class="title section__name">
                                 branding
                             </h3>
-                            <div  class="services__content">
+                            <div class="section__services-content">
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur
                                     adipisicing elit, sed do eiusmod tempor
@@ -63,11 +64,11 @@
                                 </p>
                             </div>
                         </article>
-                        <article class="services__design">
-                            <h3 class="title services__title">
+                        <article class="section__design">
+                            <h3 class="title section__name">
                                 web design
                             </h3>
-                            <div  class="services__content">
+                            <div class="section__services-content">
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur
                                     adipisicing elit, sed do eiusmod tempor
@@ -76,11 +77,11 @@
                                 </p>
                             </div>
                         </article>
-                        <article class="services__marketing">
-                            <h3 class="title services__title">
+                        <article class="section__marketing">
+                            <h3 class="title section__name">
                                 marketing
                             </h3>
-                            <div  class="services__content">
+                            <div class="section__services-content">
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur
                                     adipisicing elit, sed do eiusmod tempor
@@ -90,6 +91,7 @@
                             </div>
                         </article>
                     </div>
+                </div>
             </section>
             <section class="section portfolio" id="portfolio">
                 <div class="main-container">
