--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>проект dropp</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, intial-scale=1">
 </head>
 <body>
         <header class="header">
@@ -35,8 +36,8 @@
                 </nav>
             </div>
         </header>
-        <div class="home home-container" id="home">
-            <div class="main-container home__content">
+        <div class="home" id="home">
+            <div class="main-container">
                 <span class="home__text">
                     come,STAY FOR A COFFEE!
                 </span>
@@ -50,12 +51,12 @@
                         services
                     </h2>
             <div class="section__content">
-                <div class="main-container">
+                <div class="main-container section__services-content">
                         <article class="section__branding">
-                            <h3 class="title section__name">
+                            <h3 class="title section__services-name">
                                 branding
                             </h3>
-                            <div class="section__services-content">
+                            <div class="section__services-info">
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur
                                     adipisicing elit, sed do eiusmod tempor
@@ -65,10 +66,10 @@
                             </div>
                         </article>
                         <article class="section__design">
-                            <h3 class="title section__name">
+                            <h3 class="title section__services-name">
                                 web design
                             </h3>
-                            <div class="section__services-content">
+                            <div class="section__services-info">
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur
                                     adipisicing elit, sed do eiusmod tempor
@@ -78,10 +79,10 @@
                             </div>
                         </article>
                         <article class="section__marketing">
-                            <h3 class="title section__name">
+                            <h3 class="title section__services-name">
                                 marketing
                             </h3>
-                            <div class="section__services-content">
+                            <div class="section__services-info">
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur
                                     adipisicing elit, sed do eiusmod tempor
@@ -94,55 +95,51 @@
                 </div>
             </section>
             <section class="section portfolio" id="portfolio">
-                <div class="main-container">
-                    <h2 class="section__title">
+                    <h2 class="section__title title">
                         PORTFOLIO
                     </h2>
-                </div>
                 <div class="section__content protfolio__content">
-                    <div class="portfolio__column">
-                        <a class="portfolio__img" href="#">
-                            <img src="img/port8.jpg" alt="Проект 3">
+                        <a class="portfolio__link" href="#">
+                            <img class="portfolio__img" src="img/port8.jpg" alt="Проект 3">
                         </a>
-                        <a class="portfolio__img" href="#">
-                            <img src="img/port1.jpg" alt="Проект 1">
+                        <a class="portfolio__link" href="#">
+                            <img class="portfolio__img" src="img/port1.jpg" alt="Проект 1">
                         </a>
-                        <a class="portfolio__img" href="#">
-                            <img src="img/port2.jpg" alt="Проект 2">
+                        <a class="portfolio__link" href="#">
+                            <img class="portfolio__img" src="img/port2.jpg" alt="Проект 2">
                         </a>
-                        <a class="portfolio__img" href="#">
-                            <img src="img/port3.jpg" alt="Проект 3">
+                        <a class="portfolio__link" href="#">
+                            <img class="portfolio__img" src="img/port3.jpg" alt="Проект 3">
                         </a>
-                        <a class="portfolio__img" href="#">
-                            <img src="img/port4.jpg" alt="Проект 4">
+                        <a class="portfolio__link" href="#">
+                            <img class="portfolio__img" src="img/port4.jpg" alt="Проект 4">
                         </a>
-                        <a class="portfolio__img" href="#">
-                            <img src="img/port5.jpg" alt="Проект 5">
+                        <a class="portfolio__link" href="#">
+                            <img class="portfolio__img" src="img/port5.jpg" alt="Проект 5">
                         </a>
-                        <a class="portfolio__img" href="#">
-                            <img src="img/port2.jpg" alt="Проект 5">
+                        <a class="portfolio__link" href="#">
+                            <img class="portfolio__img" src="img/port2.jpg" alt="Проект 5">
                         </a>
-                        <a class="portfolio__img" href="#">
-                            <img src="img/port5.jpg" alt="Проект 4">
+                        <a class="portfolio__link" href="#">
+                            <img class="portfolio__img" src="img/port5.jpg" alt="Проект 4">
                         </a>
-                        <a class="portfolio__img" href="#">
-                            <img src="img/port6.jpg" alt="Проект 1">
+                        <a class="portfolio__link" href="#">
+                            <img class="portfolio__img" src="img/port6.jpg" alt="Проект 1">
                         </a>
-                        <a class="portfolio__img" href="#">
-                            <img src="img/port7.jpg" alt="Проект 2">
+                        <a class="portfolio__link" href="#">
+                            <img class="portfolio__img" src="img/port7.jpg" alt="Проект 2">
                         </a>
-                        <a class="portfolio__img" href="#">
-                            <img src="img/port8.jpg" alt="Проект 3">
+                        <a class="portfolio__link" href="#">
+                            <img class="portfolio__img" src="img/port8.jpg" alt="Проект 3">
                         </a>
-                        <a class="portfolio__img" href="#">
-                            <img src="img/port3.jpg" alt="Проект 6">
+                        <a class="portfolio__link" href="#">
+                            <img class="portfolio__img" src="img/port3.jpg" alt="Проект 6">
                         </a>
-                    </div>
                 </div>
             </section>
             <section class="section about" id="about">
                 <div class="main-container">
-                    <h2 class="section__title">
+                    <h2 class="section__title title">
                         ABOUT US
                     </h2>
                 </div>
@@ -251,7 +248,7 @@
             </section>
             <section class="section posts" id="posts">
                 <div class="main-container">
-                    <h2 class="section__title">
+                    <h2 class="section__title title">
                         LATEST POSTS
                     </h2>
                 </div>
@@ -261,7 +258,7 @@
                             <article class="article posts__article">
                                 <img class="posts__img" src="img/post1.jpg" alt="Летнее прюключение">
                                 <div class="article__content posts__column-content">
-                                    <h2 class="article__title posts__title">
+                                    <h2 class="title posts__title">
                                         SUMMER ADVENTURES
                                     </h2>
                                     <div class="posts__date">
@@ -281,7 +278,7 @@
                             <article class="article posts__article">
                                 <img class="posts__img" src="img/post2.jpg" alt="Карандаш">
                                 <div class="article__content posts__column-content">
-                                    <h2 class="article__title posts__title">
+                                    <h2 class="title posts__title">
                                         ROMANIAN FOLKLORE
                                     </h2>
                                     <div class="posts__date">
@@ -303,7 +300,7 @@
                             <article class="article posts__article">
                                 <img class="posts__img" src="img/post3.jpg" alt="Карандаш">
                                 <div class="article__content posts__column-content">
-                                    <h2 class="article__title posts__title">
+                                    <h2 class="title posts__title">
                                         HEROES: DECAT O REVI...
                                     </h2>
                                     <div class="posts__date">
@@ -323,7 +320,7 @@
                             <article class="article posts__article">
                                 <img class="posts__img" src="img/post4.jpg" alt="Карандаш">
                                 <div class="article__content posts__column-content">
-                                    <h2 class="article__title posts__title">
+                                    <h2 class="title posts__title">
                                         WHAT’S ON DUBAI AND...
                                     </h2>
                                     <div class="posts__date">
