--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>проект dropp</title>
     <link rel="stylesheet" href="css/style.css">
-    <meta name="viewport" content="width=device-width, intial-scale=1">
 </head>
 <body>
         <header class="header">
